# sss-front

./: .env.example  .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vercel.json  vite.config.js  개발계획서.md  정보교환방식.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/api/: responses.py  strategy.py  surveys.py
backend/app/models/: __init__.py  context_log.py  response.py  strategy_version.py  survey.py
backend/app/services/: llm_client.py  response_service.py  sandbox_runner.py  strategy_service.py  survey_service.py
backend/tests/: test_cors.py  test_db.py  test_health.py  test_sandbox_runner.py  test_strategy_flow.py  test_survey_flow.py
src/: App.jsx  auth.js  css.js  index.css  main.jsx  notify.js  upbit.js
src/alerts/: alertConfig.js  alertSocket.js  sound.js
src/api/: backtest.js  base.js  chat.js  codegen.js  tradingData.js
src/components/: AlertToasts.jsx  AuthLayout.jsx  ChatWidget.jsx  ProtectedRoute.jsx  Sidebar.jsx  Topbar.jsx
src/pages/: Login.jsx  Signup.jsx
src/tabs/: BacktestTab.jsx  ChatTab.jsx  MonitorTab.jsx  SettingsTab.jsx  StrategyTab.jsx  SurveyTab.jsx
